cmake_minimum_required(VERSION 3.20)

project(Win32.Gui.Examples)

add_subdirectory(HelloWorlds)
add_subdirectory(Applications)
add_subdirectory(Controls)
add_subdirectory(Containers)
add_subdirectory(MenusAndToolbars)
add_subdirectory(Windows)
add_subdirectory(Dialogs)
add_subdirectory(Components)
add_subdirectory(Events)
add_subdirectory(Others)
