cmake_minimum_required(VERSION 3.0)

project(Controls)

add_subdirectory(Button)
add_subdirectory(CheckBox)
add_subdirectory(ComboBox)
add_subdirectory(ProgressBar)
add_subdirectory(RadioButton)
add_subdirectory(StaticPicture)
add_subdirectory(StaticText)
add_subdirectory(TextBox)
add_subdirectory(TrackBar)
