cmake_minimum_required(VERSION 3.0)

project(Dialogs)

add_subdirectory(AboutBox)
add_subdirectory(ColorDialog)
add_subdirectory(FindDialog)
add_subdirectory(FolderBrowserDialog)
add_subdirectory(FontDialog)
add_subdirectory(MessageBox)
add_subdirectory(OpenFileDialog)
add_subdirectory(PageSetupDialog)
add_subdirectory(ReplaceDialog)
add_subdirectory(SaveFileDialog)
